--- a/index.html
+++ b/index.html
@@ -1,4 +1,25 @@
 <h1>IGVDev</h1>
 
-<p>Hi! I'm Guido</p><br/>
+<p>Hi! I'm Guido Verstraeten</p>
 <p>I'm a Fullstack developer who mainly works with the MERN stack.</p>
+
+<h3>My Skills</h3>
+<ul>
+  <li>MongoDB</li>
+  <li>Express</li>
+  <li>React</li>
+  <li>
+    NodeJS  
+  </li>
+  
+  <li>TypeScript</li>
+  <li>NextJS</li>
+  <li>SQL</li>
+</ul>
+
+<h3>My Links</h3>
+
+<ul>
+  <li><a href="https://www.linkedin.com/in/igvdev/">LinkedIn</a></li>
+  <li><a href="https://github.com/IGVDev">GitHub</a></li>
+</ul>
